--- a/experimental interface/lineup/crowd/exp1.html
+++ b/experimental interface/lineup/crowd/exp1.html
@@ -191,22 +191,25 @@
 
 		var COMBINATION = 'aehk';
 		var RANDOMIZE_COLOR_ORDER = true;
+		// var BLOCK_SEED = [
+		// 	{ center: 0.030, correlation: 0.07, expectation: 0.110, std: 0.02},
+			
+		// 	{ center: 0.040, correlation: 0.07, expectation: 0.130, std: 0.04},
+		// 	{ center: 0.050, correlation: 0.07, expectation: 0.160, std: 0.04},
+		// 	{ center: 0.060, correlation: 0.07, expectation: 0.190, std: 0.04},
+		// 	{ center: 0.070, correlation: 0.07, expectation: 0.210, std: 0.04},
+		// 	{ center: 0.080, correlation: 0.07, expectation: 0.230, std: 0.04},
+		// 	//{ center: 0.090, correlation: 0.07, expectation: 0.240, std: 0.04},
+		// 	{ center: 0.100, correlation: 0.07, expectation: 0.260, std: 0.04},
+		// 	//{ center: 0.110, correlation: 0.07, expectation: 0.270, std: 0.04},
+		// 	{ center: 0.120, correlation: 0.07, expectation: 0.285, std: 0.05},
+		// 	{ center: 0.130, correlation: 0.07, expectation: 0.300, std: 0.05},
+		// 	{ center: 0.140, correlation: 0.07, expectation: 0.320, std: 0.05},
+		// 	{ center: 0.165, correlation: 0.07, expectation: 0.340, std: 0.05},
+			
+		// ];
 		var BLOCK_SEED = [
 			{ center: 0.030, correlation: 0.07, expectation: 0.110, std: 0.02},
-			
-			{ center: 0.040, correlation: 0.07, expectation: 0.130, std: 0.04},
-			{ center: 0.050, correlation: 0.07, expectation: 0.160, std: 0.04},
-			{ center: 0.060, correlation: 0.07, expectation: 0.190, std: 0.04},
-			{ center: 0.070, correlation: 0.07, expectation: 0.210, std: 0.04},
-			{ center: 0.080, correlation: 0.07, expectation: 0.230, std: 0.04},
-			//{ center: 0.090, correlation: 0.07, expectation: 0.240, std: 0.04},
-			{ center: 0.100, correlation: 0.07, expectation: 0.260, std: 0.04},
-			//{ center: 0.110, correlation: 0.07, expectation: 0.270, std: 0.04},
-			{ center: 0.120, correlation: 0.07, expectation: 0.285, std: 0.05},
-			{ center: 0.130, correlation: 0.07, expectation: 0.300, std: 0.05},
-			{ center: 0.140, correlation: 0.07, expectation: 0.320, std: 0.05},
-			{ center: 0.165, correlation: 0.07, expectation: 0.340, std: 0.05},
-			
 		];
 		var trialPerSubblock = 2;
 
@@ -222,8 +225,9 @@
 
 		// experiment structure
 		// =====================
-		var trialPerBlock = 5;
-		var engagementPerBlock = 2;
+		var trialPerBlock = 1;
+		var engagementPerBlock = 0;
+		console.log("trialPerBlock:", trialPerBlock);
 
 		// preset blocks
 		var blocks = [
@@ -371,6 +375,7 @@
 
 				// update status label
 				var stimPerBlock = trialPerBlock + engagementPerBlock;
+				console.log("stimPer:", trialPerBlock, engagementPerBlock);
 				var p = (trialNum + blockNum*stimPerBlock) /	(stimPerBlock*blocks.length)
 				var label = (trialNum+1 + blockNum*stimPerBlock) + " / " +
 				(stimPerBlock*blocks.length) + ' (' + Math.floor(.5+100*p) + '% complete)';
@@ -522,7 +527,8 @@
 					generatedBlocks.push(block);
 				}
 				blocks = generatedBlocks;
-				trialPerBlock = trialPerSubblock * BLOCK_SEED.length;
+				// trialPerBlock = trialPerSubblock * BLOCK_SEED.length;
+				trialPerBlock = 1;
 			}
 
 			for (var b=0; b<blocks.length; b++)
@@ -735,36 +741,51 @@
 
 			console.log("data2send size: " + data2send.length);
 
-			(function(experiment, trial, _data2send, _callback) {
-				$.ajax({
-					type: "POST",
-					url: DATA_URL,
+			// (function(experiment, trial, _data2send, _callback) {
+			// 	$.ajax({
+			// 		type: "POST",
+			// 		url: DATA_URL,
 
-					data: _data2send,
-					dataType: "json",
-					contentType: "application/json; charset=utf-8",
+			// 		data: _data2send,
+			// 		dataType: "json",
+			// 		contentType: "application/json; charset=utf-8",
 
-					success: function(data)
-					{
-						console.log("sendData SUCCESS");
-						_callback(true);
-					},
+			// 		success: function(data)
+			// 		{
+			// 			console.log("sendData SUCCESS");
+			// 			_callback(true);
+			// 		},
 
-					error: function(errMsg)
-					{
-						console.log("sendData failed: " + errMsg);
-						console.log("trials left: " + (trial));
-						if (trial > 0) {
-							experiment.sendData(trial-1, _callback);
-						}
-						else
-						{
-							_callback(false);
-						}
-					}
-				});
-				//console.log("send complete");
-			})(this, TRIALS != undefined ? TRIALS : 3, data2send, callback);
+			// 		error: function(errMsg)
+			// 		{
+			// 			console.log("sendData failed: " + errMsg);
+			// 			console.log("trials left: " + (trial));
+			// 			if (trial > 0) {
+			// 				experiment.sendData(trial-1, _callback);
+			// 			}
+			// 			else
+			// 			{
+			// 				_callback(false);
+			// 			}
+			// 		}
+			// 	});
+			// 	//console.log("send complete");
+			// })(this, TRIALS != undefined ? TRIALS : 3, data2send, callback);
+
+			if (data2send && window.localStorage) {
+				try {
+					// 将数据转换为字符串以便保存
+					let stringifiedData = JSON.stringify(data2send);
+					// 存储数据
+					localStorage.setItem('experimentData', stringifiedData);
+					console.log("Data saved to local storage successfully.");
+					console.log(JSON.parse(stringifiedData));
+					// _callback(true);
+				} catch (error) {
+					console.error("Saving data to local storage failed:", error);
+					// _callback(false);
+				}
+			}
 		}
 
 		// set periodic timeout to poll heartbeat
